[gd_scene load_steps=30 format=3 uid="uid://cut5pavaweiph"]

[ext_resource type="Script" path="res://Battle Folder/Script/movearrowup.gd" id="1_6uoci"]
[ext_resource type="Texture2D" uid="uid://nxqejpw1acud" path="res://Battle Folder/Sprite/falling notes/wagakama-1.png.png" id="2_gg4ey"]
[ext_resource type="Texture2D" uid="uid://dmy8fa4drcsuf" path="res://Battle Folder/Sprite/falling notes/whiteframe.png" id="3_2u6s1"]
[ext_resource type="Texture2D" uid="uid://haseggjeukd4" path="res://Battle Folder/Sprite/falling notes/wagakama-2.png.png" id="4_njqfy"]
[ext_resource type="Texture2D" uid="uid://dggc5h6pntlg5" path="res://Battle Folder/Sprite/falling notes/wagakama-3.png.png" id="5_b3ccx"]
[ext_resource type="Texture2D" uid="uid://bogerpf5h7ogu" path="res://Battle Folder/Sprite/falling notes/wagakama-4.png.png" id="6_wvjrv"]
[ext_resource type="Texture2D" uid="uid://iqdcqq7vi3td" path="res://Battle Folder/Sprite/falling notes/wagakama-5.png.png" id="7_fb2t2"]
[ext_resource type="Texture2D" uid="uid://ycrcb038rlrd" path="res://Battle Folder/Sprite/Perfect etc/Perfect 1.png" id="8_0yjbm"]
[ext_resource type="Texture2D" uid="uid://sd36o6nsnxt7" path="res://Battle Folder/Sprite/Perfect etc/Perfect 2.png" id="9_jwc1i"]
[ext_resource type="Texture2D" uid="uid://gvwy3d52uio1" path="res://Battle Folder/Sprite/Perfect etc/Perfect 3.png" id="10_gflpv"]
[ext_resource type="Texture2D" uid="uid://8khihp5r036e" path="res://Battle Folder/Sprite/Perfect etc/Perfect 4.png" id="11_yjohr"]
[ext_resource type="Texture2D" uid="uid://6677vn0jstmf" path="res://Battle Folder/Sprite/Perfect etc/Great 1.png" id="12_fljki"]
[ext_resource type="Texture2D" uid="uid://bewaomqmtbuur" path="res://Battle Folder/Sprite/Perfect etc/Great 2.png" id="13_ixebp"]
[ext_resource type="Texture2D" uid="uid://dmilbefi13l2v" path="res://Battle Folder/Sprite/Perfect etc/Great 3.png" id="14_iwxrc"]
[ext_resource type="Texture2D" uid="uid://dhc1i36wuy3hh" path="res://Battle Folder/Sprite/Perfect etc/Great 4.png" id="15_ro2m8"]
[ext_resource type="Texture2D" uid="uid://et2l45x0psci" path="res://Battle Folder/Sprite/Perfect etc/Ok 1.png" id="16_11cr7"]
[ext_resource type="Texture2D" uid="uid://blymr17a2y4y2" path="res://Battle Folder/Sprite/Perfect etc/Ok 2.png" id="17_o2usk"]
[ext_resource type="Texture2D" uid="uid://bg37tqp078ibo" path="res://Battle Folder/Sprite/Perfect etc/Ok 3.png" id="18_gayss"]
[ext_resource type="Texture2D" uid="uid://cfctjrsecgelj" path="res://Battle Folder/Sprite/Perfect etc/Ok 4.png" id="19_68f6t"]
[ext_resource type="Texture2D" uid="uid://cgxkh3wv460vl" path="res://Battle Folder/Sprite/Perfect etc/miss1.png" id="20_d7u01"]
[ext_resource type="Texture2D" uid="uid://dynhuliaqovww" path="res://Battle Folder/Sprite/Perfect etc/miss2.png" id="21_hic6j"]
[ext_resource type="Texture2D" uid="uid://cvneg5ixqhmfy" path="res://Battle Folder/Sprite/Perfect etc/miss3.png" id="22_gad1b"]
[ext_resource type="Texture2D" uid="uid://b7l8hwku8yo3x" path="res://Battle Folder/Sprite/Perfect etc/miss4.png" id="23_mlcx4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bw8uc"]
size = Vector2(40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_d0j87"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gg4ey")
}, {
"duration": 1.0,
"texture": ExtResource("3_2u6s1")
}, {
"duration": 1.0,
"texture": ExtResource("4_njqfy")
}, {
"duration": 1.0,
"texture": ExtResource("5_b3ccx")
}, {
"duration": 1.0,
"texture": ExtResource("6_wvjrv")
}, {
"duration": 1.0,
"texture": ExtResource("7_fb2t2")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5kf0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_0yjbm")
}, {
"duration": 1.0,
"texture": ExtResource("9_jwc1i")
}, {
"duration": 1.0,
"texture": ExtResource("10_gflpv")
}, {
"duration": 1.0,
"texture": ExtResource("11_yjohr")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_er8tf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_fljki")
}, {
"duration": 1.0,
"texture": ExtResource("13_ixebp")
}, {
"duration": 1.0,
"texture": ExtResource("14_iwxrc")
}, {
"duration": 1.0,
"texture": ExtResource("15_ro2m8")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6bghp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_11cr7")
}, {
"duration": 1.0,
"texture": ExtResource("17_o2usk")
}, {
"duration": 1.0,
"texture": ExtResource("18_gayss")
}, {
"duration": 1.0,
"texture": ExtResource("19_68f6t")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8jj3h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_d7u01")
}, {
"duration": 1.0,
"texture": ExtResource("21_hic6j")
}, {
"duration": 1.0,
"texture": ExtResource("22_gad1b")
}, {
"duration": 1.0,
"texture": ExtResource("23_mlcx4")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="movearrowup" type="Area2D" groups=["up"]]
position = Vector2(18, -18)
scale = Vector2(1.02107, 1.02107)
script = ExtResource("1_6uoci")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.513243, 0.267508)
scale = Vector2(1.556, 1.556)
shape = SubResource("RectangleShape2D_bw8uc")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(17.956, -8.36109)
scale = Vector2(0.894, 0.894)
sprite_frames = SubResource("SpriteFrames_d0j87")

[node name="Perfect" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(3.07564, 6.77867)
scale = Vector2(3.826, 3.826)
sprite_frames = SubResource("SpriteFrames_5kf0s")

[node name="Great" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(16.7867, 5.79932)
scale = Vector2(4.783, 3.826)
sprite_frames = SubResource("SpriteFrames_er8tf")

[node name="Ok" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(54.0026, 5.3922)
scale = Vector2(5.739, 3.826)
sprite_frames = SubResource("SpriteFrames_6bghp")

[node name="Miss" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(2.938, -115)
scale = Vector2(3.24415, 2.93809)
sprite_frames = SubResource("SpriteFrames_8jj3h")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_area_shape_exited"]
[connection signal="animation_looped" from="Sprite2D" to="." method="_on_sprite_2d_animation_looped"]
[connection signal="animation_looped" from="Perfect" to="." method="_on_perfect_animation_looped"]
[connection signal="animation_looped" from="Great" to="." method="_on_great_animation_looped"]
[connection signal="animation_looped" from="Ok" to="." method="_on_ok_animation_looped"]
[connection signal="animation_looped" from="Miss" to="." method="_on_miss_animation_looped"]
